--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,15 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.idea/
+
+.vscode/
+
+#Hardhat files
+cache
+artifacts
+hardhat.config.js
+
+.env
+.env.production
