--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 /.pnp
 .pnp.js
 
+# contracts
+contracts
+
 # testing
 /coverage
 
@@ -13,10 +16,12 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
@@ -30,6 +35,3 @@ yarn-error.log*
 cache
 artifacts
 hardhat.config.js
-
-.env
-.env.production
