--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "sv":"cd build && http-server"
   },
   "eslintConfig": {
     "extends": [
