--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
     "craco.config.js",
     "test",
     "*.d.ts",
-    "script/deploy.js",
+    "scripts/**/*",
     "setupProxy.js"
   ],
   "settings": {
