--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@craco/craco": "^6.2.0",
     "@ethersproject/experimental": "^5.4.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@openzeppelin/contracts": "^4.3.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -29,6 +30,7 @@
     "craco-less": "^1.20.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "5.5.2",
+    "hardhat-etherscan": "^1.0.1",
     "http-proxy-middleware": "^2.0.1",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
