--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "scripts": {
     "start": "craco start",
     "build": "GENERATE_SOURCEMAP=false craco build",
+    "windownBuild": "set GENERATE_SOURCEMAP=false&& craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
     "sv": "cd build && http-server"
