--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@web3-react/network-connector": "^6.1.9",
     "@web3-react/walletconnect-connector": "^6.2.4",
     "antd": "^4.16.13",
+    "arseeding-js": "^0.0.14",
     "arweave": "^1.11.6",
     "arweave-bundles": "^1.0.3",
+    "arweave-wallet-connector": "^0.0.31",
     "axios": "^0.21.4",
     "babel-plugin-import": "^1.13.3",
     "bignumber.js": "^9.0.1",
