--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@web3-react/network-connector": "^6.1.9",
     "@web3-react/walletconnect-connector": "^6.2.4",
     "antd": "^4.16.13",
+    "arbundles": "^0.6.21",
     "arseeding-js": "^0.0.14",
     "arweave": "^1.11.6",
     "arweave-bundles": "^1.0.3",
