--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "dependencies": {
     "@bundlr-network/client": "^0.8.1",
     "@craco/craco": "^6.2.0",
+    "@emotion/cache": "^11.10.5",
+    "@emotion/react": "^11.10.5",
+    "@emotion/utils": "^1.2.0",
     "@ethersproject/experimental": "^5.4.0",
+    "@mantine/core": "^5.9.2",
+    "@mantine/hooks": "^5.9.2",
     "@mantine/rte": "^5.9.2",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@openzeppelin/contracts": "^4.3.1",
@@ -26,7 +31,7 @@
     "@web3-react/walletconnect-connector": "^6.2.4",
     "antd": "^4.16.13",
     "arbundles": "^0.6.21",
-    "arseeding-js": "^0.0.16",
+    "arseeding-js": "^0.0.23",
     "arweave": "^1.11.6",
     "arweave-bundles": "^1.0.3",
     "arweave-wallet-connector": "^0.0.31",
