--- a/package.json
+++ b/package.json
@@ -5,6 +5,16 @@
   "dependencies": {
     "@bundlr-network/client": "^0.8.1",
     "@craco/craco": "^6.2.0",
+    "@editorjs/checklist": "^1.4.0",
+    "@editorjs/delimiter": "^1.3.0",
+    "@editorjs/editorjs": "^2.26.4",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/image": "^2.8.1",
+    "@editorjs/link": "^2.5.0",
+    "@editorjs/list": "^1.8.0",
+    "@editorjs/quote": "^2.5.0",
+    "@editorjs/simple-image": "^1.5.1",
+    "@editorjs/table": "^2.2.0",
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/utils": "^1.2.0",
