--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.9",
     "@bundlr-network/client": "^0.8.1",
     "@craco/craco": "^6.2.0",
     "@editorjs/checklist": "^1.4.0",
@@ -53,6 +54,7 @@
     "echarts": "^5.4.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "5.5.2",
+    "graphql": "^16.6.0",
     "http-proxy-middleware": "^2.0.1",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
