--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,17 +22,13 @@
     }
   },
   "extends": [
-    "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:react-hooks/recommended",
-    "prettier/@typescript-eslint",
-    "plugin:prettier/recommended"
+    "react-app",
+    "react-app/jest"
   ],
   "rules": {
-    "@typescript-eslint/explicit-function-return-type": "off",
-    "prettier/prettier": "error",
-    "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/no-var-requires": "off",
-    "@typescript-eslint/explicit-module-boundary-types":"off"
+    "eqeqeq": "off",
+    "no-undef": "off",
+    "no-restricted-globals": "off",
+    "no-unused-vars": "off"
   }
 }
