--- a/package.json
+++ b/package.json
@@ -85,8 +85,15 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
-    ]
+      "plugin:@typescript-eslint/recommended",
+      "prettier/@typescript-eslint"
+    ],
+    "rules": {
+      "no-undef": "off",
+      "no-restricted-globals": "off",
+      "no-unused-vars": "off",
+      "no-unused-expressions":"off"
+    }
   },
   "browserslist": {
     "production": [
@@ -99,15 +106,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "dotenv": "^10.0.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^4.0.0",
-    "hardhat": "^2.6.2",
-    "prettier": "^2.3.2"
   }
 }
