--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.7.9",
     "@bundlr-network/client": "^0.8.1",
     "@craco/craco": "^6.2.0",
     "@editorjs/checklist": "^1.4.0",
@@ -53,6 +54,7 @@
     "echarts": "^5.4.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "5.5.2",
+    "graphql": "^16.6.0",
     "http-proxy-middleware": "^2.0.1",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
@@ -83,8 +85,15 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
-    ]
+      "plugin:@typescript-eslint/recommended",
+      "prettier/@typescript-eslint"
+    ],
+    "rules": {
+      "no-undef": "off",
+      "no-restricted-globals": "off",
+      "no-unused-vars": "off",
+      "no-unused-expressions":"off"
+    }
   },
   "browserslist": {
     "production": [
@@ -97,15 +106,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "dotenv": "^10.0.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^4.0.0",
-    "hardhat": "^2.6.2",
-    "prettier": "^2.3.2"
   }
 }
