--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
     "styled-components": "^5.3.1",
     "swr": "^1.0.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "web3": "^4.0.1",
+    "web3modal": "^1.9.12"
   },
   "scripts": {
     "start": "craco start",
@@ -92,7 +94,7 @@
       "no-undef": "off",
       "no-restricted-globals": "off",
       "no-unused-vars": "off",
-      "no-unused-expressions":"off"
+      "no-unused-expressions": "off"
     }
   },
   "browserslist": {
