--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "5.5.2",
     "graphql": "^16.6.0",
+    "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^2.0.1",
     "less": "^4.1.1",
     "less-loader": "^10.0.1",
