--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.9",
+    "@bnb-chain/greenfield-js-sdk": "^1.2.1",
     "@bundlr-network/client": "^0.8.1",
     "@craco/craco": "^6.2.0",
     "@editorjs/checklist": "^1.4.0",
@@ -36,6 +37,8 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.14",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-react": "^1.0.6",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/network-connector": "^6.1.9",
